# images

./: README.md  describe_images.py  justfile  pyproject.toml
_site/: action.html  cards.html  classes.html  flag-action.html  flag-building.html  flag-duplicate.html  flag-event.html  flag-group_photo.html  flag-hardware.html  flag-illustration.html  flag-logo.html  flag-outdoor.html  flag-person_1.html  flag-person_n.html  flag-presentation.html  flag-product_photo.html  flag-programming.html  flag-robot.html  flag-screenshot.html  flag-stock.html  flag-teaching.html  github.html  group.html  index.html  logos.html  memes.html  microbit.html  misc.html  mkt.html  module-navigation.html  motors.html  p3logos.html  projects.html  python.html  robots.html  stock.html  vscode.html
action/: 2020.01.14-Bell-MS-Tech-Discovery-Day_5-scaled.yaml  2020.01.14-Bell-MS-Tech-Discovery-Day_6.yaml  Barbara-Bry-KPBS-visit-local-coding-school.yaml  Bry-Visits-Local-Coding-Schoo.yaml  DerekProgramming.yaml  EEDelMarTimes.yaml  Forcepoint-Hackathon-2019-1.yaml  Former-League-Student-Visits-Classroom.yaml  Gen-Connect-Family-Screening-1200px.yaml  Gen-Connect-yellowcar.yaml  IMG_4317-scaled.yaml  IMG_4343-scaled.yaml  IMG_5178-scaled.yaml  IMG_5207.yaml  IMG_6573-scaled.yaml  IMG_6573_cropped.yaml  Isis-at-the-library-circle.yaml  Isis-at-the-library.yaml  Jackie-Eshaan-Shiva-students.yaml  League-Featured-in-Councilmember-Bry-February-2017-Newsletter.yaml  League-Ventilator-Team-1.yaml  League-Ventilator-Team.yaml  MG_5461_picmonkeyed-300x288-1.yaml  MG_5502-scaled.yaml  Our_MissionBG.yaml  (+20 more)
(+307 files in other folders)
